--- a/project/templates/core/facebook.html
+++ b/project/templates/core/facebook.html
@@ -2,5 +2,5 @@
 {% load socialaccount %}
 
 {% block content %}
-  <a href="{% provider_login_url "facebook" method="oauth2" next="/oauth/success/" %}">Facebook OAuth2</a>
+  <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2</a>
 {% endblock %}
